--- a/project/templates/flatpages/defaultcontact.html
+++ b/project/templates/flatpages/defaultcontact.html
@@ -38,10 +38,8 @@
         <!-- Page content-->
         <div class="container">
             <div class="text-center mt-5">
-                <p><h1>{% block content %}
-                   {{ flatpage.content }}
-                   {% endblock content %}</h1> </p>
-                <p><h1>{% include 'flatpages/contactpage.html' %}</h1></p>
+                <p>{{ flatpage.content }}
+                   {{ flatpage.content }} </p>
             </div>
     </body>
 </html>
